Applied eligrey/FileSaver.js/pull/148

--- a/demo/index.xhtml
+++ b/demo/index.xhtml
@@ -59,9 +59,9 @@
     <input type="submit" value="Save"/>
   </form>
 </section>
-<script src="https://cdn.rawgit.com/eligrey/Blob.js/master/Blob.js"/>
-<script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js"/>
-<script src="../FileSaver.js"/>
-<script src="demo.js"/>
+<script src="https://cdn.rawgit.com/eligrey/Blob.js/master/Blob.js"></script>
+<script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js"></script>
+<script src="../FileSaver.js"></script>
+<script src="demo.js"></script>
 </body>
 </html>
