--- a/demo/index.xhtml
+++ b/demo/index.xhtml
@@ -61,7 +61,7 @@
 </section>
 <script src="https://cdn.rawgit.com/eligrey/Blob.js/master/Blob.js"></script>
 <script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js"></script>
-<script src="../src/FileSaver.js"></script>
+<script src="../FileSaver.js"></script>
 <script src="demo.js"></script>
 </body>
 </html>
